Canary with argo rollouts and istio/single-vs-multiple-svc/multiple-svc-single-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vs1
  namespace: istio-argo-rollouts
spec:
  gateways:
  - istio-system/rollouts-demo-gateway
  hosts:
  - "*"
  http:
  - name: route-one
    route:
    - destination:
        host: rollouts-demo-stable
        port:
          number: 80
      weight: 100
    - destination:
        host: rollouts-demo-canary
        port:
          number: 80
      weight: 0
